# Wallet-Tracker

./: .gitignore  BUILD.md  README.md
.github/workflows/: release.yml
backend/: .env  .gitignore  README.md  build-bundle.js  build-nexe.js  build.sh  index.js  nodemon.json  package-lock.json  package.json  server.js
backend/scripts/: build-current.js  build-mac.js
backend/src/: app.js
backend/src/controllers/: walletController.js
backend/src/docs/: swagger.js
backend/src/domain/Enrichers/: EthBalanceEnricher.js  IBalanceEnricher.js
backend/src/domain/Factory/: WalletStrategyFactory.js  WalletStrategyRegistry.js
backend/src/domain/Providers/: CodexRpcProvider.js  EthRpcProvider.js  ZeroBalanceProvider.js
backend/src/domain/Strategy/: BchWalletStrategy.js  BtcWalletStrategy.js  EthWalletStrategy.js  IWalletStrategy.js  (+4 more)
backend/src/routes/: walletRoute.js
backend/src/services/: walletService.js
backend/src/utils/: logger.js  normalisation.js
frontend/: .gitignore  copy-backend.sh  package-lock.json  package.json  vite.config.ts
frontend/scripts/: copy-env.js  generate-icons.js  post-build.js
frontend/src/: App.tsx  index.css  tauri-api-core.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: backend.ts
frontend/src/components/: DevToolsIndicator.tsx
frontend/src/hooks/: useInspectElement.ts
frontend/src/pages/: AddressGeneratorPage.css  AddressGeneratorPage.tsx
scripts/: README-release.md  create-release-zip.ps1  debug-backend.ps1
(+1 files in other folders)
